--- a/web/index.html
+++ b/web/index.html
@@ -14,7 +14,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Quicksand:wght@600&family=Open+Sans:wght@400;600&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Quicksand:wght@600&family=Open+Sans:wght@400;600&family=Space+Grotesk:wght@600;700&display=swap"
       rel="stylesheet"
     />
   </head>
