fix: update logo URLs to use the correct server path across multiple files

--- a/web/public/demo.html
+++ b/web/public/demo.html
@@ -200,7 +200,7 @@
       This is a demo article for testing the Divee widget.
     </p>
   </footer>
-  <script src="https://vdbmhqlogqrxozaibntq.supabase.co/storage/v1/object/public/sdk/divee.sdk.v1.js" 
+  <script src="https://srv.divee.ai/storage/v1/object/public/sdk/divee.sdk.v1.js" 
       data-project-id="0691915b-399c-4e43-bd3b-ee6cf1f03be4"
       data-article-class=".technews-daily-article">
   </script>
