--- a/web/public/demo.html
+++ b/web/public/demo.html
@@ -110,7 +110,7 @@
 
     <img class="article-cover" src="https://images.unsplash.com/photo-1498050108023-c5249f4df085?w=1600&h=900&fit=crop" alt="Futuristic newsroom" />
 
-  <script src="https://srv.divee.ai/storage/v1/object/public/sdk/divee.sdk.v1.js" 
+  <script src="https://srv.divee.ai/storage/v1/object/public/sdk/divee.sdk.latest.js" 
       data-project-id="0691915b-399c-4e43-bd3b-ee6cf1f03be4"
       data-article-class=".technews-daily-article">
   </script>
