fix: update title and remove unused links in cash.html for clarity

--- a/web/public/cash.html
+++ b/web/public/cash.html
@@ -5,12 +5,10 @@
   content="A7vZI3v+Gz7JfuRolKNM4Aff6zaGuT7X0mf3wtoZTnKv6497cVMnhy03KDqX7kBz/q/iidW7srW31oQbBt4VhgoAAACUeyJvcmlnaW4iOiJodHRwczovL3d3dy5nb29nbGUuY29tOjQ0MyIsImZlYXR1cmUiOiJEaXNhYmxlVGhpcmRQYXJ0eVN0b3JhZ2VQYXJ0aXRpb25pbmczIiwiZXhwaXJ5IjoxNzU3OTgwODAwLCJpc1N1YmRvbWFpbiI6dHJ1ZSwiaXNUaGlyZFBhcnR5Ijp0cnVlfQ==">
 <meta name=viewport content="width=device-width, initial-scale=1.0">
 <meta name=robots content="NOINDEX, NOFOLLOW">
-<title>Cash Cal Pro</title>
+<title>Cash Pro</title>
 <meta name=description content>
-<link rel=canonical href=https://www.cal-online.co.il/landing/cashcalpros />
 <meta property=og:title content="Cash Cal Pro">
 <meta property=og:description content>
-<meta property=og:url content=https://www.cal-online.co.il/landing/cashcalpros />
 <meta property=og:type content=article>
 <style>
   :root {
@@ -1575,14 +1573,10 @@
         <div class=col-12>
           <div>
             <p><strong>הנפקת הכרטיס והטבות המועדון</strong><br>ניתן להנפיק עד שני כרטיסים ללקוח. תנאי הכרטיס בכפוף
-              לתנאים המלאים ולמסמכי ההצטרפות <a rel=noopener
-                href=https://www.cal-online.co.il/media/iciixydi/cashcal-pro-takanon-n.pdf target=_blank
-                title="Cashcal Pro Takanon N"
-                aria-label="על מנת להפוך את האתר לנגיש לקורא מסך לחץ alt + 1. על מנת להפסיק הודעה זאת לחץ alt + 2."><span
-                  style=text-decoration:underline>ולתקנון</span></a> . 1% עמלת מט"ח בקניות בחו"ל ובאתרי אונליין (במקום
+              לתנאים המלאים ולמסמכי ההצטרפות  . 1% עמלת מט"ח בקניות בחו"ל ובאתרי אונליין (במקום
               3%), ההנחה בשנה הראשונה ממועד הנפקת הכרטיס. לאחר תום השנה הראשונה עמלת המט"ח בקניות בחול ובאתרי אונליין
               תעמוד על 2%. אי עמידה בפירעון ההלוואה או האשראי עלול לגרור חיוב בריבית פיגורים והליכי הוצאה לפועל. <a
-                href=https://www.cal-online.co.il/media/0pjn0irr/bring-a-friend-cashcalpro.pdf
+                href=""
                 aria-label="על מנת להפוך את האתר לנגיש לקורא מסך לחץ alt + 1. על מנת להפסיק הודעה זאת לחץ alt + 2."><span
                   style=text-decoration:underline>לתקנון</span></a> מבצע חבר מביא חבר.</p>
             <p><strong>דמי כרטיס</strong><br>בשנה הראשונה יינתן פטור מלא מדמי כרטיס, החל מהשנה השנייה יגבו דמי כרטיס בסך
@@ -1597,7 +1591,7 @@
               31.12.23 ולא המרתי אותן לשובר BUYME עד לסוף חודש מרץ 2024, הנקודות יימחקו בתאריך 31.3.24). לאחר המרת
               הנקודות בכרטיס לשובר BUYME- יתקבל שובר BUYME בתוקף ל- 5 שנים. שימו לב כי לא תמחק צבירה מתחת ל- 50 נקודות
               בכרטיסים פעילים. למידע נוסף היכנסו&nbsp;<span style=text-decoration:underline><a
-                  href=https://www.cal-online.co.il/media/iciixydi/cashcal-pro-takanon-n.pdf title="Cash Pro Takanon N"
+                  href="" title="Cash Pro Takanon N"
                   aria-label="על מנת להפוך את האתר לנגיש לקורא מסך לחץ alt + 1. על מנת להפסיק הודעה זאת לחץ alt + 2.">לתקנון
                   Cash Pro</a></span>.</p>
             <p><strong>מסגרת אשראי חוץ בנקאית*</strong><br>מסגרת אשראי אחת לכל כרטיסי כאל (חוץ בנקאיים).<br>אי עמידה
