fix: correct Open Graph title in cash.html for consistency

--- a/web/public/cash.html
+++ b/web/public/cash.html
@@ -7,7 +7,7 @@
 <meta name=robots content="NOINDEX, NOFOLLOW">
 <title>Cash Pro</title>
 <meta name=description content>
-<meta property=og:title content="Cash Cal Pro">
+<meta property=og:title content="Cash Pro">
 <meta property=og:description content>
 <meta property=og:type content=article>
 <style>
