--- a/web/public/investing.html
+++ b/web/public/investing.html
@@ -12548,7 +12548,7 @@
         </div>
     </div><iframe style=display:none name=__tcfapiLocator title="CMP Locator"></iframe><iframe height=1 width=1
         style=position:absolute;top:0px;left:0px;border:none;visibility:hidden
-        sandbox="allow-popups allow-top-navigation-by-user-activation"
+        sandbox="allow-scripts allow-popups allow-top-navigation-by-user-activation"
         srcdoc="<html><meta charset=utf-8><meta name=referrer content=no-referrer><meta http-equiv=content-security-policy content=&quot;default-src 'none'; font-src 'self' data:; img-src 'self' data:; style-src 'unsafe-inline'; media-src 'self' data:; script-src 'unsafe-inline' data:; object-src 'self' data:; frame-src 'self' data:;&quot;>"></iframe>
 
     <div id=«R1ibagsm99hk6» data-floating-ui-portal></div>
