Refactor code structure for improved readability and maintainability

--- a/web/public/cash.html
+++ b/web/public/cash.html
@@ -935,7 +935,7 @@
   }
 </style>
 <meta http-equiv=content-security-policy
-  content="default-src 'none'; font-src 'self' data:; img-src 'self' data: https: http:; style-src 'unsafe-inline'; media-src 'self' data:; script-src 'unsafe-inline' data: https://srv.divee.ai https://securepubads.g.doubleclick.net; connect-src https://srv.divee.ai; object-src 'self' data:; frame-src 'self' data:;">
+  content="default-src 'none'; font-src 'self' data:; img-src 'self' data: https: http:; style-src 'unsafe-inline'; media-src 'self' data:; script-src 'unsafe-inline' data: https://srv.divee.ai https://securepubads.g.doubleclick.net; connect-src https://srv.divee.ai https://cdn.divee.ai; object-src 'self' data:; frame-src 'self' data:;">
 </head>
 
 <body class=home>
