feat: Implement contact form with reCAPTCHA Enterprise validation and submission handling

--- a/web/index.html
+++ b/web/index.html
@@ -17,7 +17,7 @@
       href="https://fonts.googleapis.com/css2?family=Quicksand:wght@600&family=Open+Sans:wght@400;600&family=Space+Grotesk:wght@600;700&display=swap"
       rel="stylesheet"
     />
-    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+    <script src="https://www.google.com/recaptcha/enterprise.js?render=6LdwHGksAAAAACdLIN5EjT5aI1CHEH1kiC6G_DUX"></script>
   </head>
   <body>
     <div id="root"></div>
